name:                AdventOfCode2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/guibou/AdventOfCode2016#readme
license:             BSD3
license-file:        LICENSE
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2015-2016 Guillaume Bouchard
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils, Day1, Day2, Day2Golf, Day3, Day4, Day5, Day6, Day7, Day8
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       megaparsec,
                       split,
                       safe,
                       cryptohash,
                       base16-bytestring,
                       bytestring,
                       parallel

  default-language:    Haskell2010

--executable AdventOfCode2016-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , AdventOfCode2016
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guibou/AdventOfCode2016
